// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basicField adds the basic field to the container, if provided 1`] = `
<div>
  <div
    style="display: flex; flex-direction: row;"
  >
    <div
      class="formFieldName"
      style="padding: 0.3em; vertical-align: middle; width:8em;"
    >
      <a
        href="http://example.com/#some-property"
        style="color: #3B5998; text-decoration: none;"
      >
        Some property
      </a>
    </div>
    <div
      class="formFieldValue"
    >
      <input
        maxlength="4096"
        size="20"
        style="background-color: #eef; padding: 0.5em;  border: .05em solid #88c;  border-radius:0.2em; font-size: 100%; margin:0.4em;"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`basicField creates a basic field 1`] = `
<div
  style="display: flex; flex-direction: row;"
>
  <div
    class="formFieldName"
    style="padding: 0.3em; vertical-align: middle; width:8em;"
  >
    <a
      href="http://example.com/#some-property"
      style="color: #3B5998; text-decoration: none;"
    >
      Some property
    </a>
  </div>
  <div
    class="formFieldValue"
  >
    <input
      maxlength="4096"
      size="20"
      style="background-color: #eef; padding: 0.5em;  border: .05em solid #88c;  border-radius:0.2em; font-size: 100%; margin:0.4em;"
      type="text"
    />
  </div>
</div>
`;

exports[`basicField shows error if no property given 1`] = `
<div
  style="margin: 0.1em; padding: 0.5em; border: 0.05em solid gray; background-color: #fee; color:black;"
>
  Error: No property given for text field: &lt;http://example.com/#form&gt;
  <button
    style="width: 2em; height: 2em;"
    type="button"
  >
    <img
      src="https://solidos.github.io/solid-ui/src/icons/noun_1180156.svg"
      style="width: 2em; height: 2em; opacity: 0.3;"
      title="Cancel"
    />
  </button>
</div>
`;
